# simpleVideoDenoise

./: CMakeLists.txt  README.md
include/: .simpFilters.h.swp  simpFilters.h  simpFilters.h~
src/: .main.cpp.swp  .simpFilters.cpp.swp  main.cpp  simpFilters.cpp  simpFilters.cpp~
